@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed a bug in event based risk calculations with
+    aggregate_by(parent) != aggregate_by(child)
   * Fixed a bug when exporting `risk_by_event` in absence of ruptures
   * Fixed a bug by not exporting `event_based_mfd` in absence of ruptures
   * Implemented Risk Targeted Disaggregations for the AELO project
